--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,19 @@ notebooks/data/*
 data/CelebA/dataset/*
 data/CelebA/dataset-reconstructed/*
 data/MNIST/MNIST/*
+data/MNIST-138/*
 data/CelebA/vae/*
 papers/*
+*/temp/*
+*/__pycache__/*
 *.DS_Store
 *.zip
 *.npy
 *.pth
 *evolution.png
 *.md
+!data/CelebA/vae/vae_200.pth
+!data/CelebA/cnn/cnn_10.pth
+!data/MNIST/vae/vae_200.pth
+!data/MNIST/classifiers/MNISTClassifier.pth
+
