--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ data/CelebA/dataset-reconstructed/*
 data/tiny-imagenet-200
 data/MNIST-138/*
 data/CelebA/vae/*
+data/ImageNet-1k/DiT-XL-2
 papers/*
 */temp/*
 */__pycache__/*
@@ -22,4 +23,5 @@ talk/*
 !data/MNIST/vae/vae_200.pth
 !data/MNIST/classifiers/MNISTClassifier.pth
 notebooks/talk/mnist/*
+
 
