--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
-matplotlib==3.10.1
-numpy==2.2.5
-opencv_python==4.11.0.86
-pandas==2.2.3
-Pillow==11.2.1
-scipy==1.15.3
-torch==2.1.1
-torchvision==0.16.1
-tqdm==4.66.1
+asposestorage==1.0.2
+diffusers==0.35.1
+diffusion==6.12.0
+download==0.3.5
+ipython==8.12.3
+ipywidgets==8.1.7
+matplotlib==3.10.6
+numpy==2.3.3
+opencv_python==4.12.0.88
+pandas==2.3.2
+Pillow==11.3.0
+pytorch_msssim==1.0.0
+scipy==1.16.2
+tensorflow==2.20.0
+tensorflow_probability==0.25.0
+torch==2.8.0
+torchvision==0.23.0
+tqdm==4.67.1
+transformers==4.56.1
+git+https://github.com/chuanyangjin/fast-DiT.git@main
